plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'com.me.libs'
            artifactId = rootProject.name
            from components.java
        }
    }
}

tasks.named('jar') {
    manifest {
        attributes(
                'Implementation-Title': rootProject.name,
                'Implementation-Version': project.version
        )
    }
    archiveBaseName = rootProject.name
}

tasks.named('test') {
    useJUnitPlatform()
}

version = '1.1.6'
